--- a/commercial.html
+++ b/commercial.html
@@ -583,28 +583,28 @@
   <!-- Footer Start -->
 
   <footer>
-    <div class="footer container">
-        <div class="footer-boxs">
-            <h4>ABOUT <span>THOMSON CONSTRUCTION</span> </h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit voluptas iste tempora, cum pariatur nesciunt odit fugiat? Iure odio eligendi doloribus atque deserunt, possimus quaerat accusantium, est repudiandae consequatur ea.</p>
-            <div class="footer-social-links">
-                <a href="#" class="footer-s-links">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="#" class="footer-s-links">
-                    <i class="fa-brands fa-twitter"></i>
-                </a>
-                <a href="#" class="footer-s-links">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#" class="footer-s-links">
-                    <i class="fa-brands fa-whatsapp"></i>
-                </a>
+        <div class="footer container">
+            <div class="footer-boxs">
+                <h4>ABOUT <span>THOMSON CONSTRUCTION</span> </h4>
+                <p>Welcome to Thomson Construction, the best place in Coimbatore to find outstanding building solutions. </p>
+                <div class="footer-social-links">
+                    <a href="#" class="footer-s-links">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="#" class="footer-s-links">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="#" class="footer-s-links">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="#" class="footer-s-links">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="footer-boxs">
-            <h4>OUR <span>SERVICES</span> </h4>
-            <ul>
+            <div class="footer-boxs">
+                <h4>OUR <span>SERVICES</span> </h4>
+                <ul>
                     <li><a href="residential.html">Residential Construction</a></li>
                     <li><a href="commercial.html">Commercial Construction</a></li>
                     <li><a href="architectural.html">Architectural Services</a></li>
@@ -613,11 +613,11 @@
                     <li><a href="renovation.html">Renovation Work</a></li>
                     <li><a href="maintenance.html">Maintenance Work</a></li>
                 </ul>
-        </div>
-       
-        <div class="footer-boxs">
-            <h4>QUICK <span>LINKS</span> </h4>
-            <ul>
+            </div>
+
+            <div class="footer-boxs">
+                <h4>QUICK <span>LINKS</span> </h4>
+                <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
@@ -625,38 +625,39 @@
                     <li><a href="blog.html">Blogs</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-        </div>
-        <div class="footer-boxs">
-            <h4>CONTACT <span>INFO</span> </h4>
-            <div class="footer-address">
-                <div class="footer-address-heading">
-                    <div class="footer-icon">
-                        <i class="fa-solid fa-location-dot"></i> <span>LOCATION</span>
+            </div>
+            <div class="footer-boxs">
+                <h4>CONTACT <span>INFO</span> </h4>
+                <div class="footer-address">
+                    <div class="footer-address-heading">
+                        <div class="footer-icon">
+                            <i class="fa-solid fa-location-dot"></i> <span>LOCATION</span>
+                        </div>
+                        <p>SF No-146, D No. 7/69-7,Thomson casa, CMC School Road, Kuppanur, Madampatty, Coimbatore,
+                            Tamil Nadu-641010</p>
                     </div>
-                    <p>SF No-146, D No. 7/69-7,Thomson casa, CMC School Road, Kuppanur, Madampatty, Coimbatore, Tamil Nadu-641010</p>
-                </div>
-                <div class="footer-address-heading">
-                    <div class="footer-icon">
-                        <i class="fa-solid fa-phone"></i> <span>CALL US</span>
+                    <div class="footer-address-heading">
+                        <div class="footer-icon">
+                            <i class="fa-solid fa-phone"></i> <span>CALL US</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <a href="tel:+917910833585">+91 79108 33585</a>
+                            <a href="tel:+918220149256">+91 82201 49256</a>
+                        </div>
+
                     </div>
-                    <div class="d-flex flex-column">
-                        <a href="tel:+917910833585">+91 79108 33585</a>
-                        <a href="tel:+918220149256">+91 82201 49256</a>
+                    <div class="footer-address-heading">
+                        <div class="footer-icon">
+                            <i class="fa-solid fa-phone"></i>
+                            <span>EMAIL US</span>
+                        </div>
+                        <a href="mailto:thomas@thomsonbuilders.co.in">thomas@thomsonbuilders.co.in</a>
+                        <a href="mailto:info@thomsonbuilders.co.in">info@thomsonbuilders.co.in</a>
                     </div>
-                    
-                </div>
-                <div class="footer-address-heading">
-                    <div class="footer-icon">
-                        <i class="fa-solid fa-phone"></i>
-                        <span>EMAIL US</span>
-                    </div>
-                    <a href="mailto:thomas@thomsonbuilders.co.in">thomas@thomsonbuilders.co.in</a>
-                    <a href="mailto:info@thomsonbuilders.co.in">info@thomsonbuilders.co.in</a>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 
 <!-- Footer End -->
