--- a/project-link.html
+++ b/project-link.html
@@ -396,9 +396,7 @@
         <div class="footer container">
             <div class="footer-boxs">
                 <h4>ABOUT <span>THOMSON CONSTRUCTION</span> </h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit voluptas iste tempora, cum pariatur
-                    nesciunt odit fugiat? Iure odio eligendi doloribus atque deserunt, possimus quaerat accusantium, est
-                    repudiandae consequatur ea.</p>
+                <p>Welcome to Thomson Construction, the best place in Coimbatore to find outstanding building solutions. </p>
                 <div class="footer-social-links">
                     <a href="#" class="footer-s-links">
                         <i class="fa-brands fa-facebook"></i>
@@ -445,7 +443,8 @@
                         <div class="footer-icon">
                             <i class="fa-solid fa-location-dot"></i> <span>LOCATION</span>
                         </div>
-                        <p>SF No-146, D No. 7/69-7,Thomson casa, CMC School Road, Kuppanur, Madampatty, Coimbatore, Tamil Nadu-641010</p>
+                        <p>SF No-146, D No. 7/69-7,Thomson casa, CMC School Road, Kuppanur, Madampatty, Coimbatore,
+                            Tamil Nadu-641010</p>
                     </div>
                     <div class="footer-address-heading">
                         <div class="footer-icon">
@@ -453,7 +452,7 @@
                         </div>
                         <div class="d-flex flex-column">
                             <a href="tel:+917910833585">+91 79108 33585</a>
-                        <a href="tel:+918220149256">+91 82201 49256</a>
+                            <a href="tel:+918220149256">+91 82201 49256</a>
                         </div>
 
                     </div>
@@ -463,7 +462,7 @@
                             <span>EMAIL US</span>
                         </div>
                         <a href="mailto:thomas@thomsonbuilders.co.in">thomas@thomsonbuilders.co.in</a>
-                    <a href="mailto:info@thomsonbuilders.co.in">info@thomsonbuilders.co.in</a>
+                        <a href="mailto:info@thomsonbuilders.co.in">info@thomsonbuilders.co.in</a>
                     </div>
                 </div>
             </div>
