--- a/projects.html
+++ b/projects.html
@@ -423,9 +423,7 @@
         <div class="footer container">
             <div class="footer-boxs">
                 <h4>ABOUT <span>THOMSON CONSTRUCTION</span> </h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit voluptas iste tempora, cum pariatur
-                    nesciunt odit fugiat? Iure odio eligendi doloribus atque deserunt, possimus quaerat accusantium, est
-                    repudiandae consequatur ea.</p>
+                <p>Welcome to Thomson Construction, the best place in Coimbatore to find outstanding building solutions. </p>
                 <div class="footer-social-links">
                     <a href="#" class="footer-s-links">
                         <i class="fa-brands fa-facebook"></i>
@@ -463,7 +461,7 @@
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="blog.html">Blogs</a></li>
                     <li><a href="contact.html">Contact</a></li>
-
+                </ul>
             </div>
             <div class="footer-boxs">
                 <h4>CONTACT <span>INFO</span> </h4>
