--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Get in Touch with Thomson Constructions | Contact Us Today</title>
-    <meta name="description" content="Contact Thomson Constructions today for expert construction services in Coimbatore. Whether you have questions about our projects or want to discuss your construction needs, our team is here to help. Reach out to us now for personalized assistance.">
+    <meta name="description"
+        content="Contact Thomson Constructions today for expert construction services in Coimbatore. Whether you have questions about our projects or want to discuss your construction needs, our team is here to help. Reach out to us now for personalized assistance.">
 
     <!-- Favicon  -->
 
@@ -254,8 +255,8 @@
             <div class="form-container">
                 <div class="form-title">
                     <h3>Message with Us</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores quisquam maxime perferendis
-                        praesentium quidem provident!</p>
+                    <p>Discover Coimbatore's charm with Thomson Constructions - crafting dreams into reality. Let's
+                        build your vision together. Message with us for bespoke solutions.</p>
                 </div>
                 <form action="wp()" method="POST">
                     <fieldset>
@@ -309,8 +310,9 @@
             </div>
             <div class="contact-section">
                 <div class="section-title">
-                    <h3>Need Any Help ?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, dolore?</p>
+                    <h3>Ready to turn your dream project into reality?</h3>
+                    <p>Reach out to Thomson Constructions in Coimbatore today for expert guidance and seamless
+                        construction services. Contact us now to start building your future. </p>
                 </div>
                 <div class="contact-content">
                     <div class="service-content-container">
@@ -387,7 +389,8 @@
         <div class="footer container">
             <div class="footer-boxs">
                 <h4>ABOUT <span>THOMSON CONSTRUCTION</span> </h4>
-                <p>Welcome to Thomson Construction, the best place in Coimbatore to find outstanding building solutions. </p>
+                <p>Welcome to Thomson Construction, the best place in Coimbatore to find outstanding building solutions.
+                </p>
                 <div class="footer-social-links">
                     <a href="#" class="footer-s-links">
                         <i class="fa-brands fa-facebook"></i>
