--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
     <section class="hire-choosing-section reveal33">
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
-                <h2>Why People's Choose <span>Thomson Construction</span></h2>
+                <h2>Why People Choose <span>Thomson Construction</span></h2>
                 <p>People choose Thomson Builders in Coimbatore for our unwavering commitment to quality, reliability,
                     and customer satisfaction. With a track record of excellence, we turn visions into reality, creating
                     homes and spaces that exceed expectations.</p>
