--- a/project-link.html
+++ b/project-link.html
@@ -291,14 +291,7 @@
     <section class="next-big-tech">
         <div class="next-big-title container">
             <h2 style="color: var(--color);">Descriptions </h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dignissimos culpa nulla, dicta nostrum
-                voluptates perspiciatis molestiae consequuntur in itaque similique eum dolorum, quibusdam expedita
-                magnam accusamus. Eum ullam perspiciatis porro voluptatem impedit cumque nihil optio consequatur tempore
-                facilis sit deserunt, quae, aliquid adipisci exercitationem tenetur, voluptatum quia quibusdam qui
-                doloremque magni reiciendis. Optio illo, sint alias qui delectus harum atque, porro laboriosam sequi
-                deserunt minima facere veniam culpa sapiente nemo illum aut aliquid est eligendi maiores blanditiis
-                error tempore! Cum beatae architecto quaerat minus earum autem. Odit adipisci eius qui expedita? Earum
-                pariatur perspiciatis nihil cupiditate dicta, beatae debitis.</p>
+            <p>At Thomson Constructions, we understand that the exterior of your home is the first impression visitors have of your property. That's why we take a comprehensive approach to every project, focusing on both aesthetics and durability. From selecting the finest materials to implementing cutting-edge construction techniques, we ensure that your residential building exterior is built to last and stands out in the neighborhood.</p>
         </div>
         <div class="project-gallery container">
             <a href="assets/images/pics/res/11.jpg" class="im1" data-lightbox="Our Gallery"
