--- a/contact.html
+++ b/contact.html
@@ -325,7 +325,7 @@
 
                         <div class="services-text">
 
-                            <a href="tel:+917910833585">+91 79108 33585</a>
+                            <a href="tel:+917010833585">+91 70108 33585</a>
                             <br>
                             <a href="tel:+918220149256">+91 82201 49256</a>
                         </div>
@@ -376,10 +376,11 @@
             <p>If You Want to Visit our company</p>
         </div>
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15661.082003994035!2d76.9441311!3d11.0932062!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8f65d00000001%3A0x7d89cae3dabfb666!2sThomson%20Builders!5e0!3m2!1sen!2sin!4v1708172746200!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3917.2919988762083!2d76.86707687504423!3d10.941301289217698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDU2JzI4LjciTiA3NsKwNTInMTAuOCJF!5e0!3m2!1sen!2sin!4v1711165584938!5m2!1sen!2sin"
             width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
 
     <!-- iframe section end -->
 
@@ -445,7 +446,7 @@
                             <i class="fa-solid fa-phone"></i> <span>CALL US</span>
                         </div>
                         <div class="d-flex flex-column">
-                            <a href="tel:+917910833585">+91 79108 33585</a>
+                            <a href="tel:+917010833585">+91 70108 33585</a>
                             <a href="tel:+918220149256">+91 82201 49256</a>
                         </div>
 
