--- a/residential.html
+++ b/residential.html
@@ -311,13 +311,13 @@
                 <div id="carouselExampleControls" class="carousel slide mb-3 " data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/images/pics/res/1.jpg" class="d-block w-100" alt="Residential-Contruction">
+                            <img src="assets/images/new-banner/4.jpeg" class="d-block w-100" alt="Residential-Contruction">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/pics/res/2.jpg" class="d-block w-100" alt="Residential-Contruction">
+                            <img src="assets/images/new-banner/5.jpeg" class="d-block w-100" alt="Residential-Contruction">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/pics/res/3.jpg" class="d-block w-100" alt="Residential-Contruction">
+                            <img src="assets/images/new-banner/6.jpeg" class="d-block w-100" alt="Residential-Contruction">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
