--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <title> Thomson Constructions Coimbatore | Building Dreams, Crafting Excellence </title>
     <meta name="description" content="Thomson Constructions in Coimbatore specializes in delivering top-tier residential and commercial construction services. Our commitment to quality craftsmanship ensures your dreams take shape with precision and excellence.">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
