--- a/architectural.html
+++ b/architectural.html
@@ -7,7 +7,8 @@
     <title>Architectural Excellence in Coimbatore | Thomson Constructions</title>
     <meta name="description" content="Thomson Constructions in Coimbatore specializes in delivering architectural excellence across residential, commercial, and institutional projects. From innovative urban developments to heritage restorations, trust us to bring your architectural vision to life.">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
