--- a/commercial.html
+++ b/commercial.html
@@ -7,7 +7,8 @@
     <title> Premier Commercial Construction Services in Coimbatore | Thomson Constructions</title>
     <meta name="description" content="Thomson Constructions in Coimbatore offers premier commercial construction services tailored to your business needs. From office buildings to retail spaces, trust us to deliver exceptional results with superior craftsmanship and attention to detail. ">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
