--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <meta name="description"
         content="Contact Thomson Constructions today for expert construction services in Coimbatore. Whether you have questions about our projects or want to discuss your construction needs, our team is here to help. Reach out to us now for personalized assistance.">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
