--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,8 @@
     <title>Top House Maintenance Services</title>
     <meta name="description" content="Look into Thomson Builders for top-notch home maintenance services in your area. We are the dependable and high-quality home maintenance business you can rely on.">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
