--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description"
         content="One of the best Thomson Construction companies in Coimbatore specializes in delivering exceptional craftsmanship and innovative design for residential and commercial.">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
