--- a/interior.html
+++ b/interior.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Transform Your Space with Thomson Constructions' Interior Design Services in Coimbatore</title>
     <meta name="description" content="Elevate your living or working environment with Thomson Constructions' expert interior design solutions in Coimbatore. From concept to execution, trust us to create spaces that inspire and delight, tailored to your taste and needs.">
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
