--- a/maintenance.html
+++ b/maintenance.html
@@ -7,7 +7,8 @@
     <title> Comprehensive Maintenance Solutions by Thomson Constructions in Coimbatore</title>
     <meta name="description" content="Thomson Constructions offers comprehensive maintenance services in Coimbatore to ensure the longevity and functionality of your properties. From routine upkeep to emergency repairs, trust us to keep your projects in optimal condition.">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
