--- a/renovation.html
+++ b/renovation.html
@@ -7,7 +7,8 @@
     <title>Renovate Your Space with Thomson Constructions' Expert Renovation Services in Coimbatore</title>
     <meta name="description" content="Thomson Constructions offers expert renovation services in Coimbatore to transform your space into a masterpiece. From residential refurbishments to commercial upgrades.">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
