--- a/residential.html
+++ b/residential.html
@@ -7,7 +7,8 @@
     <title> Luxury Residential Properties in Coimbatore, Thomson Builders</title>
     <meta name="description" content="Explore Thomson Builders' exceptional residential properties in Coimbatore, crafted with meticulous attention to detail. Find your perfect home with us today and experience unmatched comfort and elegance.">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
