--- a/project-link.html
+++ b/project-link.html
@@ -7,7 +7,8 @@
     <title> Thomson Builders</title>
     <meta name="description" content="meta description here">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
