--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,8 @@
     <title>House Maintenance Services</title>
     <meta name="description" content="For excellent home maintenance services, look no further than Thomson Builders. For long-lasting home quality, our specialists excel at thorough workhouse maintenance.">
 
-    <!-- Favicon  -->
+     <!-- Favicon  -->
+    <link rel="icon" href="assets/images/logo/logo (2).png">
 
 
     <!-- Css Elements  -->
