--- a/gallery.html
+++ b/gallery.html
@@ -116,7 +116,7 @@
                 </ul>
                 <div class="nav-social-links d-none d-lg-flex">
 
-                    <a href="#">
+                    <a href="https://www.facebook.com/thomsonbuilders/" target="_blank" rel="">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
                     <a href="#">
@@ -775,7 +775,7 @@
                 <h4>ABOUT <span>THOMSON CONSTRUCTION</span> </h4>
                 <p>Welcome to Thomson Construction, the best place in Coimbatore to find outstanding building solutions. </p>
                 <div class="footer-social-links">
-                    <a href="#" class="footer-s-links">
+                    <a href="https://www.facebook.com/thomsonbuilders/" class="footer-s-links">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
                     <a href="#" class="footer-s-links">
