--- a/blog.html
+++ b/blog.html
@@ -140,7 +140,7 @@
 
             <div class="nav-social-links d-flex d-lg-none">
 
-                <a href="#">
+                <a href="https://www.facebook.com/thomsonbuilders/">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
                 <a href="#">
