--- a/maintenance.html
+++ b/maintenance.html
@@ -113,7 +113,7 @@
             </ul>
             <div class="nav-social-links d-none d-lg-flex">
 
-                <a href="#">
+                <a href="https://www.facebook.com/thomsonbuilders/">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
                 <a href="#">
