--- a/project-link.html
+++ b/project-link.html
@@ -117,7 +117,7 @@
             </ul>
             <div class="nav-social-links d-none d-lg-flex">
 
-                <a href="#">
+                <a href="https://www.facebook.com/thomsonbuilders/">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
                 <a href="#">
