--- a/commercial.html
+++ b/commercial.html
@@ -139,7 +139,7 @@
 
         <div class="nav-social-links d-flex d-lg-none">
 
-            <a href="#">
+            <a href="https://www.facebook.com/thomsonbuilders/">
                 <i class="fa-brands fa-facebook"></i>
             </a>
             <a href="#">
@@ -598,7 +598,7 @@
                     <a href="#" class="footer-s-links">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#" class="footer-s-links">
+                    <a href="https://www.instagram.com/thomson_builders/?hl=en" class="footer-s-links">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
                 </div>
