--- a/gallery.html
+++ b/gallery.html
@@ -784,7 +784,7 @@
                     <a href="#" class="footer-s-links">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#" class="footer-s-links">
+                    <a href="https://www.instagram.com/thomson_builders/?hl=en" class="footer-s-links">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
                 </div>
