--- a/architectural.html
+++ b/architectural.html
@@ -119,7 +119,7 @@
                     <a href="https://www.facebook.com/thomsonbuilders/" target="_blank" rel="">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://www.instagram.com/thomson_builders/?hl=en">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
                     <a href="#">
@@ -145,9 +145,9 @@
                 <a href="https://www.facebook.com/thomsonbuilders/">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a href="#">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
+                <a href="https://www.instagram.com/thomson_builders/?hl=en">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
                 <a href="#">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
