--- a/renovation.html
+++ b/renovation.html
@@ -117,9 +117,9 @@
                 <a href="https://www.facebook.com/thomsonbuilders/">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a href="#">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
+                <a href="https://www.instagram.com/thomson_builders/?hl=en">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
                 <a href="#">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
