--- a/interior.html
+++ b/interior.html
@@ -141,7 +141,7 @@
             <a href="https://www.facebook.com/thomsonbuilders/">
                 <i class="fa-brands fa-facebook"></i>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/thomson_builders/?hl=en">
                 <i class="fa-brands fa-instagram"></i>
             </a>
             <a href="#">
